k8s/digitalocean/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dropmate
  labels:
    name: dropmate
    environment: production
